--- a/wp-content/themes/salefish/assets/scss/pages/blog.scss
+++ b/wp-content/themes/salefish/assets/scss/pages/blog.scss
@@ -55,7 +55,6 @@
       }
     }
 
-    &:hover &-image img { transform: scale(1.06); }
 
     &-body {
       padding: 14px 16px;
@@ -273,7 +272,6 @@
       }
     }
 
-    &:hover &-image img { transform: scale(1.04); }
 
     &-body {
       padding: 28px 28px 32px;
@@ -344,7 +342,6 @@
       }
     }
 
-    &:hover &-image img { transform: scale(1.05); }
 
     &-body {
       padding: 20px 22px;
@@ -441,7 +438,6 @@
     }
   }
 
-  &:hover &__image img { transform: scale(1.04); }
 
   &__body {
     padding: 20px 20px 24px;
