--- a/wp-content/themes/salefish/assets/scss/pages/home.scss
+++ b/wp-content/themes/salefish/assets/scss/pages/home.scss
@@ -133,7 +133,6 @@
           margin-top: 30px;
         }
 
-        &:hover img { transform: scale(1.03); }
 
         img {
           height: 100%;
@@ -513,7 +512,6 @@
         overflow: hidden;
         border-radius: 10px;
 
-        &:hover .wrap img { transform: scale(1.04); }
 
         .wrap {
           padding: 30px;
@@ -764,7 +762,6 @@
             margin: 0 auto;
           }
 
-          &:hover img { transform: scale(1.04); }
 
           img {
             max-width: 100%;
